--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
-body {
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  line-height: 1;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
+  font-size: 10px;
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  width: 80%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 2rem 0;
+}
+
+.changeMode {
+  position: fixed;
+  z-index: 10;
+  width: 5rem;
+  height: 10rem;
+  right: 2rem;
+  top: calc(50% - 5rem);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  border: none;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+  background: linear-gradient(
+    180deg,
+    rgba(9, 142, 251, 1) 0%,
+    rgba(18, 97, 162, 1) 100%
+  );
+  color: #ddd;
+}
+
+.changeMode .icon {
+  font-size: 1.8rem;
+}
+
+.changeMode p {
+  font-size: 1.2rem;
+  margin-top: 1rem;
+}
+
+.dark {
+  background: #333;
+}
+
+.light {
+  background: #ddd;
+}
+
+/* PRESENTACION */
+
+.presentacion {
+  background: #222;
+  padding: 3rem 0;
+  border-radius: 1rem;
+  margin-bottom: 4rem;
+}
+
+.light .presentacion {
+  background: #bbb;
+}
+
+.presentacion h1 {
+  font-size: 8rem;
+  letter-spacing: 0.5rem;
+  text-align: center;
+  background: linear-gradient(
+    180deg,
+    rgba(9, 142, 251, 1) 0%,
+    rgba(18, 97, 162, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.presentacion p {
+  text-align: center;
+  color: #ddd;
+  margin-top: 2.5rem;
+  font-size: 4rem;
+  letter-spacing: 0.5rem;
+  font-weight: 600;
+}
+
+.light .presentacion p {
+  color: #333;
+}
+
+@media screen and (max-width: 768px) {
+  * {
+    font-size: 8px;
+  }
+  .container {
+    width: 90%;
+  }
+  .presentacion h1 {
+    font-size: 7rem;
+  }
+  .presentacion p {
+    font-size: 3rem;
+  }
 }
